mfbt/Variant.h
@@ -112,11 +112,12 @@ struct VariantTag {
   static const size_t TypeCount = sizeof...(Ts);
 
  public:
-  using Type = std::conditional_t < TypeCount < 3, bool,
-        std::conditional_t<TypeCount<(1 << 8), uint_fast8_t,
-                                     size_t  // stop caring past a certain
-                                             // point :-)
-                                     >>;
+  using Type = std::conditional_t<
+      (TypeCount <= 2), bool,
+      std::conditional_t<(TypeCount <= size_t(UINT_FAST8_MAX)), uint_fast8_t,
+                         size_t  // stop caring past a certain
+                                 // point :-)
+                         >>;
 };
 
 // TagHelper gets the given sentinel tag value for the given type T. This has to
